--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Me chamo Miguel e vou me tornar um programador um dia, quero terminar o Ensino Médio aprendendo como progamar e me tornar um exelente profissional</p>
     <p>O Portfólio tem o intuito de mostrar as minhas atividades</p>
     <p>Espero que entendam a minha proposta e gostem das atividades</p>
+    <button>Sobre mim</button>
 <style>
     *{
         margin:0;
