--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
 </head>
 <body>
     <h1>Olá, seja muito bem vindo(a) no meu Portfólio!</h1>
-    <p>Me chamo Miguel e vou me tornar um programador um dia, quero terminar o Ensino Médio aprendendo como progamar e me tornar um exelente profissional</p>
+    &nbsp;
     <p>O Portfólio tem o intuito de mostrar as minhas atividades</p>
     <p>Espero que entendam a minha proposta e gostem das atividades</p>
-
+    &nbsp;
+    <p>Sobre mim</p>
+    &nbsp;
+    <p>Me chamo Miguel e vou me tornar um programador um dia, quero terminar o Ensino Médio aprendendo como progamar e me tornar um exelente profissional</p>
+    &nbsp;
+    <p>Projetos</p>
+    &nbsp;
+    <p>Nada ainda</p>
 <style>
     *{
         margin:0;
