--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <p>O Portfólio tem o intuito de mostrar as minhas atividades</p>
     <p>Espero que entendam a minha proposta e gostem das atividades</p>
     &nbsp;
-    <p>Sobre mim</p>
+    <h3>Sobre mim</h3>
     &nbsp;
     <p>Me chamo Miguel e vou me tornar um programador um dia, quero terminar o Ensino Médio aprendendo como progamar e me tornar um exelente profissional</p>
     &nbsp;
-    <p>Projetos</p>
+    <h3>Projetos</h3>
     &nbsp;
     <p>Nada ainda</p>
 <style>
