--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     &nbsp;
     <h2>Sobre mim</h2>
     &nbsp;
-    <p>Me chamo Miguel e vou me tornar um programador um dia, quero terminar o Ensino Médio aprendendo como progamar e me tornar um exelente profissional</p>
+    <p>Me chamo Miguel e tenho 16 anos, estudo no SesiSenai e vou me tornar um programador um dia, quero terminar o Ensino Médio aprendendo como progamar e me tornar um exelente profissional. Gosto muito de programação e pretendo aprender cada vez mais com o passar do tempo.</p>
     &nbsp;
     <h2>Projetos</h2>
     &nbsp;
