--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Sirin+Stencil&family=Taprom&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sirin+Stencil&family=Taprom&display=swap" rel="stylesheet">
+
     <title>Portfólio</title>
 </head>
 <body>
-   <center> <h1>Olá, seja muito bem vindo(a) no meu Portfólio!</h1> 
+    <div class="background-container">
+        <!-- Conteúdo do site aqui -->
+        <div class="alcance"6>
+   <center> <h1>Olá, seja muito bem vindo(a) ao meu Portfólio!</h1> 
     &nbsp;
     <p>O Portfólio tem o intuito de mostrar as minhas atividades</p>
     <p>Espero que entendam a minha proposta e gostem das atividades</p>
@@ -18,17 +25,8 @@
     <h2>Projetos</h2>
     &nbsp;
     <p>Nada ainda</p>
-<style>
-    *{
-        margin:0;
-        padding: 0;
-        box-sizing: 0;
-    }
-    body{
-        width: 100vw;
-        height: 100vh;
-        background-image: url(https://static.vecteezy.com/ti/vetor-gratis/p1/9169455-ceu-dourado-por-do-sol-na-costa-natureza-paisagem-vetor.jpg);
-    }
-</style>
+    
+    </div>
+    </div>
 </body>
 </html>
