--- a/index.html
+++ b/index.html
@@ -30,3 +30,31 @@
     </div>
 </body>
 </html>
+
+h1, h2{
+    font-family: "Bungee", sans-serif;
+}
+
+body{
+    font-family: "Sirin Stencil", sans-serif;
+}
+      
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.background-container {
+    width: 100%;
+    height: 100%;
+    background-image: url('fundo.jpg');
+    background-size: cover; /* faz cobrir toda a tela */
+    background-position: center; /* Centraliza a imagem */
+}
+
+.alcance{
+    max-width: 600px; /* Define a largura máxima */
+    margin: 0 auto; /* Centraliza o elemento */
+}
