--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Sirin+Stencil&family=Taprom&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sirin+Stencil&family=Taprom&display=swap" rel="stylesheet">
+    <link href="https://miguelfazioassuncao.github.io/Portf-lio/style.css" rel="stylesheet" />
 
     <title>Portfólio</title>
 </head>
